# OS

./: Dockerfile
.devcontainer/: Dockerfile
lr1/: CMakeLists.txt  ChildProcess.c  CreateProcess.c  commands.txt
lr2/: CMakeLists.txt  main.c
lr2/include/: parallelMergeSort.h
lr2/src/: parallelMergeSort.c
